<resources>
    <string name="app_name">Diversight</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sing_up_1">É novo por aqui?<span> </span></string>
    <string name="sing_up_2">Cadastre-se</string>
    <string name="sing_up_3">para começar!</string>
    <string name="fg_sing_up_description1">Não se preocupe! Seus dados estão seguros conosco e são necessários apenas para confirmarmos a sua identidade.</string>
    <string name="fg_sing_up_title1">Olá</string>
    <string name="select">Selecionar</string>
    <string name="fg_sing_up_title2">Agora</string>
    <string name="fg_sing_up_description2">precisamos entender um pouco mais sobre o seu momento profissional, pode nos auxiliar?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_teste">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!-- Shared preferences keys-->
    <string name="key_boarding_visible">onboarding</string>
    <string name="key_user_name">user_name</string>
    <string name="key_user_skin">user_skin</string>
    <string name="key_user_sex">user_sex</string>
    <string name="key_user_gender">user_gender</string>
    <string name="key_user_pcd">user_pcd</string>
    <string name="key_user_pcd_visual">user_pcd_visual</string>
    <string name="key_user_pcd_fisical">user_pcd_fisical</string>
    <string name="key_user_pcd_hearing">user_pcd_hearing</string>
    <string name="key_user_pcd_intellectual">user_pcd_intellectual</string>
    <string name="key_user_pcd_psychosocial">user_pcd_psychosocial</string>
    <string name="key_user_pcd_readapted">user_pcd_readapted</string>
    <string name="key_user_birthday">user_birthday</string>
    <string name="key_user_enterprise">user_enterprise</string>
    <string name="key_user_occupation">user_occupation</string>
    <string name="key_user_office">user_office</string>
    <string name="key_user_email">user_email</string>
    <string name="final_board">Vamos lá!</string>
    <string name="init_board">Próximo!</string>
    <string name="search">Pesquisa</string>
    <string name="very_sad">Muito ruim</string>
    <string name="normal">Normal</string>
    <string name="bad">Ruim</string>
    <string name="good">Bom</string>
    <string name="very_good">Muito bom</string>
    <string name="daily_enunciated">Como você está se sentindo hoje?</string>
    <string name="weekly_enunciated">Como foi o trabalho essa semana?</string>
    <string name="daily_subtitle">Humor diário</string>
    <string name="weekly_subtitle">Humor semanal</string>
    <string name="send">Enviar</string>
    <string name="back_to_home">Voltar para home</string>
    <string name="send_search">Sua pesquisa foi enviada com sucesso!</string>
    <string name="hello">Olá</string>
    <string name="name">Nome</string>
    <string name="skin">Cor e/ou raça</string>
    <string name="birthday_model">AAAA-MM-DD</string>
    <string name="birthday">Data de nascimento</string>
    <string name="pcd">Pessoa com deficiência (PCD)</string>
    <string name="gender">Orientação Sexual</string>
    <string name="sex">Gênero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesquisas">Pesquisas</string>
    <string name="dispon_veis">Disponíveis</string>
    <string name="di_rias">Diárias</string>
    <string name="senha">Senha</string>
    <string name="samilly_ioasys_com">samilly@ioasys.com</string>
    <string name="_123">123</string>
</resources>